Endpoint for file and document upload
